syntax = "proto3";

package order;

option go_package = "github.com/mrezayusufy/shop-api/pkg/proto/order";

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}